@@ -64,6 +64,7 @@ JsVar *jswrap_banglejs_buzz(int time, JsVarFloat amt);
 void jswrap_banglejs_off();
 void jswrap_banglejs_softOff();
 JsVar *jswrap_banglejs_getLogo();
+void jswrap_banglejs_factoryReset();
 
 void jswrap_banglejs_init();
 void jswrap_banglejs_kill();
